--- a/Memories.html
+++ b/Memories.html
@@ -32,13 +32,13 @@
           <div class="ly-box01">
             <div class="ly-txt01">
               <p class="ly-stxt01">
-                今天是你的生日 祝你生日快乐！
+                今天是你的生日 祝姐姐生日快乐！
               </p>
-              <p class="ly-stxt02">愿甜甜蜜蜜属于你的生日</p>
+              <p class="ly-stxt02">愿开心快乐属于你的生日</p>
               <p class="ly-stxt03">属于你所有的日子</p>
             </div>
             <div class="ly-txt02">
-              <p>稍等一下点击漂浮链接</p>
+              <p>--宋浩铜</p>
             </div>
           </div>
         </div>
@@ -46,15 +46,12 @@
       <!--动态方块-->
       <ul class="bg-bubbles">
         <li>
-          <a href="https://iculture.cc/demo/web_establish/web.php?id=EcsHV0h">点击惊喜</a>
           <!-- <img src="./img/timg.gif" style="width: 100%; height: 100%" /> -->
         </li>
         <li>
-          <a href="https://iculture.cc/demo/web_establish/web.php?id=EcsHV0h">点击惊喜</a>
           <!-- <img src="./img/timg.gif" style="width: 100%; height: 100%" /> -->
         </li>
         <li>
-          <a href="https://iculture.cc/demo/web_establish/web.php?id=EcsHV0h">点击惊喜</a>
           <!-- <img src="./img/timg.gif" style="width: 100%; height: 100%" /> -->
         </li>
         <li>
