--- a/Memories.html
+++ b/Memories.html
@@ -32,7 +32,7 @@
           <div class="ly-box01">
             <div class="ly-txt01">
               <p class="ly-stxt01">
-                今天是你的生日 祝姐姐生日快乐！
+                今天是你的生日 祝你生日快乐！
               </p>
               <p class="ly-stxt02">愿开心快乐属于你的生日</p>
               <p class="ly-stxt03">属于你所有的日子</p>
